updated about me page

--- a/index.html
+++ b/index.html
@@ -23,5 +23,14 @@
 </header>
 
 <body>
+    <section id="main-info">
+        <h2>About me</h2>
+            <img src="../Basic-Portfolio/assets/images/profile-pic.jpeg" align="left">
+            <p>My name is Nico Loparco and I am currently participating in the Georgia Tech full-stack coding bootcamp.
+               I recently graduated from the University of Georgia with a bachelor's degree of business administration focused on Finance as well as a minor's in Spanish.
+               Originally from Chicago, I have since lived in Miami and Georgia and I currently reside in Alpharetta.
+               I'm an avid sports fan and my two favorite teams are the Miami Heat and the Chicago Bears. I also love music and travelling.
+            </p>       
+    </section>
 </body>
 </html>
