finished contact.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
     <div class="logo">
         <h1>Nico Loparco</h1>
-    </div>
+     </div>
     <nav> 
         <ul class="links">
             <li><a href="index.html">About</a></li>
@@ -25,7 +25,7 @@
 <body>
     <section id="main-info">
         <h2>About me</h2>
-            <img src="../Basic-Portfolio/assets/images/profile-pic.jpeg" align="left">
+            <img src="../Basic-Portfolio/assets/images/profile-pic.jpeg" align=>
             <p>My name is Nico Loparco and I am currently participating in the Georgia Tech full-stack coding bootcamp.
                I recently graduated from the University of Georgia with a bachelor's degree of business administration focused on Finance as well as a minor's in Spanish.
                Originally from Chicago, I have since lived in Miami and Georgia and I currently reside in Alpharetta.
