fixed errors in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" href="../Basic-Portfolio/assets/css/style.css">
 </head>
 
-<header>
+<body>
+    <header>
     <div class="logo">
         <h1>Nico Loparco</h1>
      </div>
@@ -20,12 +21,12 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
      </nav>
-</header>
+    </header>
 
-<body>
+
     <section id="main-info">
         <h2>About me</h2>
-            <img src="../Basic-Portfolio/assets/images/profile-pic.jpeg" align=>
+            <img src="../Basic-Portfolio/assets/images/profile-pic.jpeg" alt="Profile Picture" align="left">
             <p>My name is Nico Loparco and I am currently participating in the Georgia Tech full-stack coding bootcamp.
                I recently graduated from the University of Georgia with a bachelor's degree of business administration focused on Finance as well as a minor's in Spanish.
                Originally from Chicago, I have since lived in Miami and Georgia and I currently reside in Alpharetta.
